syntax = "proto3";

package services;
option  go_package = "./services";

service Calculator {
  rpc Hello(HelloRequest) returns (HelloResponse);
  rpc Fibonacci(FibonacciRequest) returns (stream FibonacciResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string result = 1;
}

message FibonacciRequest {
  uint32 n = 1;
}

message FibonacciResponse {
  uint32 result = 1;
}
